Add esp32_greenhouse_01 to dashboard device selector

--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -25,6 +25,7 @@
                 <select id="device-select">
                     <option value="test_device">Test Device</option>
                     <option value="esp32_device_001">ESP32 Device 001</option>
+                    <option value="esp32_greenhouse_01">ESP32 Greenhouse 01</option>
                     <!-- Add more devices here -->
                 </select>
             </div>
