--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -109,6 +109,10 @@
                     </tbody>
                 </table>
             </div>
+            <div id="load-more-container" class="load-more-container" style="display: none;">
+                <p id="load-more-text" class="load-more-text">Showing 20 of X readings</p>
+                <button id="load-more-btn" class="btn-secondary">Load 20 More</button>
+            </div>
         </section>
 
         <!-- Status Section -->
